# brainlove

./: Cargo.toml  NOTES.md  gen.py  stupid_program.bf
cli/: Cargo.toml
interpreter/: Cargo.toml
interpreter/src/: lib.rs
src/: interpreter.rs  lib.rs  main.rs
web/: Cargo.toml  index.html
web/assets/: styles.css
web/src/: main.rs
