[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
interpreter = { path = "../interpreter" }
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
